# Minimilian

./: .gitignore  .gitmodules  CMakeLists.txt  README
include/maximilian/: chorus.h  core.h  delayline.h  distortion.h  dynamic.h  env.h  envelope.h  envelopefollower.h  filter.h  flanger.h  lagexp.h  map.h  maximilian.h  mix.h  oscillator.h  sample.h
include/minimilian/: chorus.h  core.h  delayline.h  distortion.h  dynamic.h  env.h  envelope.h  envelopefollower.h  filter.h  flanger.h  lagexp.h  map.h  minimilian.h  mix.h  oscillator.h  sample.h
lua/: CMakeLists.txt  hello.lua  maximilian.i
src/: chorus.cpp  delayline.cpp  distortion.cpp  dynamic.cpp  env.cpp  envelope.cpp  envelopefollower.cpp  filter.cpp  flanger.cpp  map.cpp  maximilian.cpp  minimilian.cpp  mix.cpp  oscillator.cpp  sample.cpp
