FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(UseSWIG)
FIND_PACKAGE(lua)
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../include/maximilian)
SET_SOURCE_FILES_PROPERTIES (maximilian.i PROPERTIES CPLUSPLUS ON )
SWIG_ADD_LIBRARY (lmaximilian TYPE SHARED LANGUAGE lua SOURCES maximilian.i)
SWIG_LINK_LIBRARIES (lmaximilian maximilian)
SWIG_LINK_LIBRARIES (lmaximilian ${LUA_LIBRARIES})
set_target_properties(lmaximilian PROPERTIES 
    PREFIX ""
    SUFFIX ".so"
    CXX_STANDARD 17 
    CXX_STANDARD_REQUIRED 17 
    SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE)
 set_target_properties(lmaximilian PROPERTIES PREFIX "")